Fixed a couple of mobile layout issues

--- a/src/components/OrderSummary/OrderSummary.scss
+++ b/src/components/OrderSummary/OrderSummary.scss
@@ -26,7 +26,7 @@
 
 .order-summary__plan-label {
   display: block;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   color: var(--color-primary);
   font-weight: var(--font-weight-semi);
 }
@@ -54,7 +54,7 @@
 }
 
 .order-summary__addon-label {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   color: var(--color-grey);
 }
 
@@ -70,7 +70,7 @@
 }
 
 .order-summary__foot-label {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   color: var(--color-grey);
 }
 
