--- a/src/components/PanelWrapper/PanelWrapper.scss
+++ b/src/components/PanelWrapper/PanelWrapper.scss
@@ -2,7 +2,7 @@
 @import '../../styles/functions';
 
 .panel-wrapper {
-  margin-bottom: var(--spacing-lg);
+  padding-bottom: var(--spacing-md);
 
   @media (width > $mq-lg) {
     display: grid;
